--- a/index.html
+++ b/index.html
@@ -12,34 +12,41 @@
     </head>
     <!--Real Content-->
     <body>
+        <!--Styleized Angle CSS required-->
+        <div class="TopAngle"></div>
         <!--Navigation Bar-->
         <div class="navBar">
-            <!--Logo-->
-            <div class="logo">
-                <span><img src="Files/Images/favicon.ico"></span>
-            </div>
             <!--Navigation Buttons-->
             <div class="navButtons">
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
-                            <a href="about.html">About</a>
-                            <a href="porfolio.html">Porfolio</a>
+                            <a href="index.html" style="text-decoration: none; color: #fff;">Home</a>
+                            <a href="about.html" style="text-decoration: none; color: #fff;">About</a>
+                            <a href="porfolio.html" style="text-decoration: none; color: #fff;">Porfolio</a>
                         </li>
                     </ul>
                 </nav>
             </div>
+            <!--Logo-->
+            <div class="logo" align="center" style="top: 25px; padding: 5%;">
+                <span><img src="Files/Images/favicon.ico"></span>
+            </div>
         </div>
         <!--Main Content-->
         <div class="Top">
-
+            
         </div>
         <!--Creative Commons Licence-->
-        <aside>
-            <a>Original site designed by:<br> </a><a href="https://www.github.com/SUPERN00Bthefirst">SUPERN00Bthe1</a>
-            <br>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-sa/4.0/88x31.png"></a><br>
+        <aside class="footer">
+            <ul>
+                <li>
+                    <a>Original site designed by:</a><a style="text-decoration: none; color: yellow;" href="https://www.github.com/SUPERN00Bthefirst"> SUPERN00Bthe1</a><br>
+                </li>
+                <li>
+                    <footer rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-sa/4.0/88x31.png"></footer><br>
+                </li>    
+            </ul>
         </aside>
         <!--Code Written By github.com/SUPERN00Bthefirst-->
     </body>
