--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <meta charset="utf-8">
         <meta name="veiwport" content="width=device-width">
         <meta name="author" content="SUPERN00Bthe1">
+        <meta name="theme-color" content="#ffff00">
         <meta property="og:type" content="website">
         <meta property="og:title" content="SUPERN00Bthe1 | Home" />
         <meta property="og:description" content="The home for all things SUPERN00B" />
         <meta property="og:url" content="https://supern00b.8bit.ca/" />
         <meta property="og:image:secure_url" content="https://supern00b.8bit.ca/Files/Images/Icon.png" />
+        <link type="application/json+oembed" href="" />
         <title>SUPERN00Bthe1 | Home</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
     </head>
