--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="The home for all things SUPERN00B" />
         <meta property="og:url" content="https://supern00b.8bit.ca/" />
         <meta property="og:image:secure_url" content="https://supern00b.8bit.ca/Files/Images/Icon.png" />
-        <link type="application/json+oembed" href="" />
+        <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json" />
         <title>SUPERN00Bthe1 | Home</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
     </head>
