--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta property="og:title" content="SUPERN00Bthe1 | Home" />
         <meta property="og:description" content="The home for all things SUPERN00B" />
         <meta property="og:url" content="https://supern00b.8bit.ca/" />
+        <meta name="twitter:card" content="summary_large_image">
         <meta property="og:image" content="https://supern00b.8bit.ca/Files/Images/Icon.png" />
         <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json" />
         <title>SUPERN00Bthe1 | Home</title>
