--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
         <meta name="veiwport" content="width=device-width">
         <meta name="author" content="SUPERN00Bthe1">
         <meta name="theme-color" content="#ffff00">
-        <meta property="og:title" content="SUPERN00Bthe1 | Home" />
-        <meta property="og:description" content="The home for all things SUPERN00B" />
-        <meta property="og:url" content="https://supern00b.8bit.ca/" />
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="og:image" content="https://supern00b.8bit.ca/Files/Images/Icon.png" />
+        <meta content="SUPERN00Bthe1 | Home" property="og:title">
+        <meta content="A Home for all things SUPERN00B." property="og:description">
+        <meta content='https://supern00b.8bit.ca/Files/Images/Icon.png' property='og:image'>
         <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json" />
         <title>SUPERN00Bthe1 | Home</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
