--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,6 @@
+<!DOCTYPE HTML>
+<html>
+  <head>
 <meta content="Discord - Free Voice and Text Chat" property="og:title">
 
 <meta content="Step up your game with a modern voice & text chat app. Crystal clear voice, multiple server and channel support, mobile apps, and more." property="og:description">
@@ -5,3 +8,5 @@
 <meta content="Discord" property="og:site_name">
 
 <meta content='https://discordapp.com/assets/ba74954dde74ff40a32ff58069e78c36.png' property='og:image'>
+  </head>
+</html>  
