--- a/Test.html
+++ b/Test.html
@@ -7,6 +7,6 @@
 
 <meta content="Discord" property="og:site_name">
 
-<meta content='https://discordapp.com/assets/ba74954dde74ff40a32ff58069e78c36.png' property='og:image'>
+<meta content='https://cdn.discordapp.com/avatars/504146705877565461/2e03e03593dbac38609fa5cb95df01e7.png?size=128' property='og:image'>
   </head>
 </html>  
