--- a/Test.html
+++ b/Test.html
@@ -7,6 +7,6 @@
 
 <meta content="Discord" property="og:site_name">
 
-<meta content='https://cdn.discordapp.com/avatars/504146705877565461/2e03e03593dbac38609fa5cb95df01e7.png?size=128' property='og:image'>
+<meta content='https://media.discordapp.net/attachments/614902329795149834/734569853398024242/NewLogo2.png?width=300&height=300' property='og:image'>
   </head>
 </html>  
