Overhauled HTML and CSS

--- a/index.html
+++ b/index.html
@@ -16,41 +16,32 @@
     </head>
     <!--Real Content-->
     <body>
-        <!--Styleized Angle CSS required-->
-        <div class="TopAngle"></div>
         <!--Navigation Bar-->
         <div class="navBar">
             <!--Navigation Buttons-->
-            <div class="navButtons">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="index.html" style="text-decoration: none; color: #fff;">Home</a>
-                            <a href="about.html" style="text-decoration: none; color: #fff;">About</a>
-                            <a href="porfolio.html" style="text-decoration: none; color: #fff;">Porfolio</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <!--Logo-->
-            <div class="logo" align="center" style="top: 25px; padding: 5%;">
-                <span><img src="Files/Images/favicon.ico"></span>
+            <div id="header" class="header">
+                <div class="logodiv">
+                    <a href="index.html"><img class="logo" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
+                    <div class="filter">
+                    <a href="index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
+                    <span class="footdogs">  / </span>
+                    <a href="/Files/Sites/Portfolio.html" style="color: gainsboro; text-decoration: none;">Portfolio</a>
+                    <span class="footdogs">  / </span>
+                    <a href="/Files/Sites/About.html" style="color: gainsboro; text-decoration: none;">About</a>
+                    <span class="footdogs">  / </span>
+                    <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: gainsboro; text-decoration: none;">Youtube</a>
+                    </div>
+                </div>
             </div>
         </div>
         <!--Main Content-->
         <div class="Top">
-            
+            <!--Discord Embed-->
+            <iframe src="https://discordapp.com/widget?id=626886313450274826&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
         <!--Creative Commons Licence-->
-        <aside class="footer">
-            <ul>
-                <li>
-                    <a>Original site designed by:</a><a style="text-decoration: none; color: yellow;" href="https://www.github.com/SUPERN00Bthefirst"> SUPERN00Bthe1</a><br>
-                </li>
-                <li>
-                    <footer rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-sa/4.0/88x31.png"></footer><br>
-                </li>    
-            </ul>
+        <aside class="footer" style="margin-bottom: -37px;">
+                    <footer rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 8px; " src="https://licensebuttons.net/l/by-sa/4.0/88x31.png"></footer><br>
         </aside>
         <!--Code Written By github.com/SUPERN00Bthefirst-->
     </body>
