--- a/Files/HTML/CustomDiscord.html
+++ b/Files/HTML/CustomDiscord.html
@@ -49,6 +49,6 @@
       CDN_HOST: 'cdn.discordapp.com',
       MARKETING_ENDPOINT: '//discord.com',
       RELEASE_CHANNEL: 'stable',
-    };</script><script src="/assets/5a61f8e3e63b7e93777f.js"></script>  
+    };</script><script src="https://discord.com/widget?id=626886313450274826&amp;theme=dark/assets/5a61f8e3e63b7e93777f.js"></script>  
 
 </body></html>
