--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <meta name="theme-color" content="#ffff00">
         <meta content="SUPERN00Bthe1 Online" property="og:title">
         <meta content="SUPERN00Bthe1 Online" property="og:site_name">
-        <meta content='https://media.discordapp.net/attachments/614902329795149834/734569853398024242/NewLogo2.png?width=300&height=300' property='og:image'>
-        <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json" />
+        <meta content="https://media.discordapp.net/attachments/614902329795149834/734569853398024242/NewLogo2.png?width=300&amp;height=300" property="og:image">
+        <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json">
         <title>SUPERN00Bthe1 | Home</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
-    </head>
+</head>
     <!--Real Content-->
-    <body>
+    <body data-gr-c-s-loaded="true">
         <!--Navigation Bar-->
         <div class="navBar">
             <!--Navigation Buttons-->
@@ -35,9 +35,15 @@
             </div>
         </div>
         <!--Main Content-->
-        <div class="Top">
-            <!--Discord Embed-->
-            <iframe src="https://supern00b.8bit.ca/Files/HTML/CustomDiscord.html" style="float: right; margin-right:45px" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
+           <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
+              <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <a href="https://youtu.be/cPHWg9ovr6A">
+                        <span class="tag">[VIDEO]</span><span>Soon™</span>
+                    </a>
+                </li>  
+               </ul>
+            </div>
         </div>
         <!--Creative Commons Licence-->
         <aside class="footer" style="margin-bottom: -37px;">
