--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <meta content="https://media.discordapp.net/attachments/614902329795149834/734569853398024242/NewLogo2.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json">
         <title>SUPERN00Bthe1 | 404</title>
-        <link rel="stylesheet" href="Files/CSS/Home.css">
+        <link rel="stylesheet" href="https://supern00b.8bit.ca/Files/CSS/Home.css">
   </head>
     <!--Real Content-->
     <body data-gr-c-s-loaded="true">
