--- a/404.html
+++ b/404.html
@@ -21,9 +21,9 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="index.html"><img class="logo" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
+                    <a href="https://supern00b.8bit.ca/index.html"><img class="logo" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
                     <div class="filter">
-                    <a href="index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
+                    <a href="https://supern00b.8bit.ca/index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
                     <a href="/Files/Sites/Portfolio.html" style="color: gainsboro; text-decoration: none;">Portfolio</a>
                     <span class="footdogs">  / </span>
@@ -37,8 +37,8 @@
         <!--Main Content-->
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;">
-              <h1 style="color: white;">OOPS!</h1>
-              <h3 style="color: white;">Im sorry, I cant find the page your looking for</h3>
+              <h1 style="color: white;font-family: 'Share Tech Mono', Monospace, Courier;">OOPS!</h1>
+              <h3 style="color: white;font-family: 'Share Tech Mono', Monospace, Courier;">Im sorry, I cant find the page your looking for</h3>
             </div>
         </div>
         <!--Creative Commons Licence-->
