--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <html>
   <!--Meta Information-->
   <head>
-        <link rel="icon" href="Files/Images/favicon.ico">
+        <link rel="icon" href="https://supern00b.8bit.ca/Files/Images/favicon.ico">
         <meta charset="utf-8">
         <meta name="author" content="SUPERN00Bthe1">
         <meta name="theme-color" content="#ffff00">
@@ -25,9 +25,9 @@
                     <div class="filter">
                     <a href="https://supern00b.8bit.ca/index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/Portfolio.html" style="color: gainsboro; text-decoration: none;">Portfolio</a>
+                    <a href="https://supern00b.8bit.ca/Files/Sites/Portfolio.html" style="color: gainsboro; text-decoration: none;">Portfolio</a>
                     <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/About.html" style="color: gainsboro; text-decoration: none;">About</a>
+                    <a href="https://supern00b.8bit.ca/Files/Sites/About.html" style="color: gainsboro; text-decoration: none;">About</a>
                     <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: gainsboro; text-decoration: none;">Youtube</a>
                     </div>
