--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
                     <div class="filter">
                     <a href="index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/Portfolio.html" style="color: gainsboro; text-decoration: none;">Portfolio</a>
+                    <a href="/Files/Sites/Portfolio" style="color: gainsboro; text-decoration: none;">Portfolio</a>
                     <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/About.html" style="color: gainsboro; text-decoration: none;">About</a>
+                    <a href="/Files/Sites/About" style="color: gainsboro; text-decoration: none;">About</a>
                     <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: gainsboro; text-decoration: none;">Youtube</a>
                     </div>
