--- a/404.html
+++ b/404.html
@@ -39,6 +39,7 @@
            <div id="content" style="max-width:100%;margin:auto;">
               <h1 style="color: white;font-family: 'Share Tech Mono', Monospace, Courier;">OOPS!</h1>
               <h3 style="color: white;font-family: 'Share Tech Mono', Monospace, Courier;">Im sorry, I cant find the page your looking for</h3>
+              <embed type="text/html" src="Dino.html" width="600" height="200"  style="border-radius: 20px; background-color: ghostwhite; overflow-x: hidden; overflow: hidden; ">
             </div>
         </div>
         <!--Creative Commons Licence-->
