--- a/Dino.html
+++ b/Dino.html
@@ -80,16 +80,16 @@
         document.addEventListener('DOMContentLoaded',onDocumentLoad)</script>
 </head>
 
-<body id="t" class="offline">
+<body id="t" class="offline" style="font-family: 'Segoe UI', Tahoma, sans-serif;">
     <div id="main-frame-error" class="interstitial-wrapper">
         <div id="main-content">
             <div class="icon icon-offline" alt="" style="visibility: hidden;"></div>
             <div id="main-message" jstcache="0">
-        <h1 jstcache="0">
+        <h1 jstcache="0" style="font-family: 'Segoe UI', Tahoma, sans-serif;">
           <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="10">No internet</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="2">No internet</p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="2" style="font-family: 'Segoe UI', Tahoma, sans-serif;">No internet</p>
         <!--The suggestion list and error code are normally presented inline,
           in which case error-information-popup-* divs have no effect. When
           error-information-popup-container has the use-popup-container class, this
