--- a/home.html
+++ b/home.html
@@ -38,6 +38,10 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <a href="https://youtu.be/gAxLNgMzAGA">
+                        <span class="tag">[VIDEO]</span><span> The Machine</span>
+                    </a>
+                    <br>
                     <a href="https://www.youtube.com/watch?v=u13Ch3ayB5c">
                         <span class="tag">[VIDEO]</span><span> I Can't Speedrun</span>
                     </a>
