Google Lighthouse Fixes
Added:
       - Lang Attribute
       - Meta Viewport Scale
       - Meta Description
       - Alt for logo

--- a/home.html
+++ b/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE HTML>
 <!--Comments are above the content they repersent-->
-<html>
+<html lang="en">
     <!--Meta Information-->
     <head>
         <link rel="icon" href="Files/Images/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="SUPERN00Bthe1">
+        <meta name="Description" content="A Website with updates and links for all of SUPERN00Bthe1's content">
         <meta name="theme-color" content="#ffff00">
         <meta content="SUPERN00Bthe1 Online" property="og:title">
         <meta content="SUPERN00Bthe1 Online" property="og:site_name">
@@ -21,15 +23,11 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="index.html"><img class="logo" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
+                    <a href="home.html"><img class="logo" alt="SUPERN00Bthe1's Minecraft Skin With Cape" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
                     <div class="filter">
-                    <a href="index.html" style="color: gainsboro; text-decoration: none;">HOME</a>
+                    <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/Portfolio" style="color: gainsboro; text-decoration: none;">Portfolio</a>
-                    <span class="footdogs">  / </span>
-                    <a href="/Files/Sites/About" style="color: gainsboro; text-decoration: none;">About</a>
-                    <span class="footdogs">  / </span>
-                    <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: gainsboro; text-decoration: none;">Youtube</a>
+                    <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: white; text-decoration: none;">Youtube</a>
                     </div>
                 </div>
             </div>
