Changes Icon.png To Logo.webp

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="home.html"><img class="logo" alt="SUPERN00Bthe1's Minecraft Skin With Cape" src="https://supern00b.8bit.ca/Files/Images/Icon.png"></a>
+                    <a href="home.html"><img class="logo" alt="SUPERN00Bthe1's Minecraft Skin With Cape" src="https://supern00b.8bit.ca/Files/Images/Logo.webp"></a>
                     <div class="filter">
                     <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
