--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <META http-equiv="refresh" content="0;URL=https://supern00b.8bit.ca/home">
+    <META http-equiv="refresh" content="0;URL=https://s_n00b.8bit.ca/home">
   </head>
 </html>
