--- a/Entries/SteveRana.html
+++ b/Entries/SteveRana.html
@@ -3,18 +3,18 @@
 <html lang="en">
     <!--Meta Information-->
     <head>
-        <link rel="icon" href="Files/Images/favicon.ico">
+        <link rel="icon" href="/Files/Images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="S_N00B">
-        <meta name="Description" content="A Generic Website for S_N00B's needs.">
+        <meta name="Description" content="Steve & Rana Figura Models">
         <meta name="theme-color" content="#008080">
         <meta content="S_N00B" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta content="https://s_n00b.8bit.ca/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
-        <link type="application/json+oembed" href="Files/oembed.json">
-        <title>S_N00B | 404</title>
-        <link rel="stylesheet" href="Files/CSS/Home.css">
+        <meta content="https://s_n00b.8bit.ca/Files/Images/SteveRana.png?width=300&amp;height=300" property="og:image">
+        <link type="application/json+oembed" href="/Files/oembed.json">
+        <title>S_N00B | Steve & Rana Figura Models</title>
+        <link rel="stylesheet" href="/Files/CSS/Home.css">
 </head>
     <!--Real Content-->
     <body data-gr-c-s-loaded="true">
@@ -23,9 +23,9 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
+                    <a href="/home.html"><img class="logo" alt="S_N00B's eye" src="/Files/Images/Logo.webp"></a>
                     <div class="filter">
-                    <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
+                    <a href="/home.html" style="color: white; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/@S_N00B" style="color: white; text-decoration: none;">Youtube</a>
                     </div>
@@ -36,8 +36,14 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <a>
-                        <span> 404 | I Broke it.</span>
+                    <a href="/Files/Uploads/Steve.zip">
+                        <img class="logo" alt="Steve" src="/Files/Uploads/SteveImage.png">
+                        <span class="tag">[DOWNLOAD]</span><span> Steve</span>
+                    </a>
+                    <br>
+                    <a href="/Files/Uploads/Rana.zip">
+                        <img class="logo" alt="Rana" src="/Files/Uploads/RanaImage.png">
+                        <span class="tag">[DOWNLOAD]</span><span> RANA</span>
                     </a>
                     <br>
                 </li>  
