--- a/home.html
+++ b/home.html
@@ -6,14 +6,14 @@
         <link rel="icon" href="Files/Images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <meta name="author" content="SUPERN00Bthe1">
-        <meta name="Description" content="A Website with updates and links for all of SUPERN00Bthe1's content">
-        <meta name="theme-color" content="#ffff00">
-        <meta content="SUPERN00Bthe1 Online" property="og:title">
-        <meta content="SUPERN00Bthe1 Online" property="og:site_name">
-        <meta content="https://media.discordapp.net/attachments/614902329795149834/734569853398024242/NewLogo2.png?width=300&amp;height=300" property="og:image">
-        <link type="application/json+oembed" href="https://supern00b.8bit.ca/Files/oembed.json">
-        <title>SUPERN00Bthe1 | Home</title>
+        <meta name="author" content="S_N00B">
+        <meta name="Description" content="A Generic Website for S_N00B's needs.">
+        <meta name="theme-color" content="#008080">
+        <meta content="S_N00B" property="og:title">
+        <meta content="S_N00B" property="og:site_name">
+        <meta content="https://s_n00b.8bit.ca/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
+        <link type="application/json+oembed" href="Files/oembed.json">
+        <title>S_N00B | Home</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
 </head>
     <!--Real Content-->
@@ -23,11 +23,11 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="home.html"><img class="logo" alt="SUPERN00Bthe1's Minecraft Skin With Cape" src="https://supern00b.8bit.ca/Files/Images/Logo.webp"></a>
+                    <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
                     <div class="filter">
                     <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
-                    <a href="https://www.youtube.com/channel/UCaxjfRUEExFc1pyI-kJy5sQ" style="color: white; text-decoration: none;">Youtube</a>
+                    <a href="https://www.youtube.com/@S_N00B" style="color: white; text-decoration: none;">Youtube</a>
                     </div>
                 </div>
             </div>
@@ -36,16 +36,12 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <a href="/Entries/SteveRana.html">
+                        <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
+                    </a>
+                    <br>
                     <a href="https://youtu.be/gAxLNgMzAGA">
                         <span class="tag">[VIDEO]</span><span> The Machine</span>
-                    </a>
-                    <br>
-                    <a href="https://www.youtube.com/watch?v=u13Ch3ayB5c">
-                        <span class="tag">[VIDEO]</span><span> I Can't Speedrun</span>
-                    </a>
-                    <br>
-                    <a href="https://www.youtube.com/watch?v=xwElvxRe1Ug">
-                        <span class="tag">[VIDEO]</span><span> Nestoria Advert</span>
                     </a>
                     <br>
                     <a href="https://youtu.be/cPHWg9ovr6A">
@@ -56,11 +52,6 @@
                </ul>
             </div>
         </div>
-        <!--Creative Commons Licence-->
-        <aside class="footer" style="margin-bottom: -37px;">
-                    <footer rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 8px; " src="https://licensebuttons.net/l/by-sa/4.0/88x31.png"></footer><br>
-        </aside>
-        <!--Code Written By github.com/SUPERN00Bthefirst-->
     </body>
 </html>
 <!--Document End-->
