--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <a href="Entries/SteveRana.html">
+                    <a href="https://s-n00b-1.github.io/Website/Entries/SteveRana.html">
                         <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
                     </a>
                     <br>
