--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <!--Meta Information-->
     <head>
-        <link rel="icon" href="Files/Images/favicon.ico">
+        <link rel="icon" href="https://s-n00b-1.github.io/Website/Files/Images/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="S_N00B">
@@ -12,9 +12,9 @@
         <meta content="S_N00B" property="og:title">
         <meta content="S_N00B" property="og:site_name">
         <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
-        <link type="application/json+oembed" href="Files/oembed.json">
+        <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
         <title>S_N00B | Home</title>
-        <link rel="stylesheet" href="Files/CSS/Home.css">
+        <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
 </head>
     <!--Real Content-->
     <body data-gr-c-s-loaded="true">
@@ -23,9 +23,9 @@
             <!--Navigation Buttons-->
             <div id="header" class="header">
                 <div class="logodiv">
-                    <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
+                    <a href="https://s-n00b-1.github.io/Website/home.html"><img class="logo" alt="S_N00B's eye" src="https://s-n00b-1.github.io/Website/Files/Images/Logo.webp"></a>
                     <div class="filter">
-                    <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
+                    <a href="https://s-n00b-1.github.io/Website/home.html" style="color: white; text-decoration: none;">HOME</a>
                     <span class="footdogs">  / </span>
                     <a href="https://www.youtube.com/@S_N00B" style="color: white; text-decoration: none;">Youtube</a>
                     </div>
