This page will be filled by blood of your kind.

--- a/Entries/SteveRana.html
+++ b/Entries/SteveRana.html
@@ -36,6 +36,8 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <span>These avatars require the </span><a href="https://modrinth.com/mod/figura">Figura Mod</a><span> to be used</span>
+                    <br>
                     <a href="https://s-n00b-1.github.io/Website/Files/Uploads/Steve.zip">
                         <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/SteveImage.png">
                         <span class="tag">[DOWNLOAD]</span><span> Steve</span>
