--- a/Entries/SteveRana.html
+++ b/Entries/SteveRana.html
@@ -9,7 +9,7 @@
         <meta name="author" content="S_N00B">
         <meta name="Description" content="Steve & Rana Figura Models">
         <meta name="theme-color" content="#008080">
-        <meta content="S_N00B" property="og:title">
+        <meta content="Steve & Rana Figura Models" property="og:title">
         <meta content="S_N00B" property="og:site_name">
         <meta content="https://s-n00b-1.github.io/Website/Files/Images/SteveRana.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
