--- a/404.html
+++ b/404.html
@@ -25,9 +25,9 @@
                 <div class="logodiv">
                     <a href="home.html"><img class="logo" alt="S_N00B's eye" src="Files/Images/Logo.webp"></a>
                     <div class="filter">
-                    <a href="home.html" style="color: white; text-decoration: none;">HOME</a>
-                    <span class="footdogs">  / </span>
-                    <a href="https://www.youtube.com/@S_N00B" style="color: white; text-decoration: none;">Youtube</a>
+                    <a href="home.html">HOME</a>
+                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <a href="https://www.youtube.com/@S_N00B">Youtube</a>
                     </div>
                 </div>
             </div>
@@ -36,9 +36,7 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <a>
-                        <span> 404 | I Broke it.</span>
-                    </a>
+                    <span> 404 | I Broke it.</span>
                     <br>
                 </li>  
                </ul>
