--- a/Entries/Mapbot.html
+++ b/Entries/Mapbot.html
@@ -7,13 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="S_N00B">
-        <meta name="Description" content="Steve & Rana Figura Models">
+        <meta name="Description" content="Mapbot Figura Model">
         <meta name="theme-color" content="#008080">
-        <meta content="Steve & Rana Figura Models" property="og:title">
+        <meta content="Mapbot Figura Model" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta content="https://s-n00b-1.github.io/Website/Files/Images/SteveRana.png?width=300&amp;height=300" property="og:image">
+        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Map.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
-        <title>S_N00B | Steve & Rana Figura Models</title>
+        <title>S_N00B | Mapbot Figura Model</title>
         <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
 </head>
     <!--Real Content-->
@@ -36,17 +36,12 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <span>These avatars require the </span><a href="https://modrinth.com/mod/figura">Figura Mod</a><span> to be used</span>
+                    <span>This avatar requires the </span><a href="https://modrinth.com/mod/figura">Figura Mod</a><span> to be used</span>
                     <br>
                     <br>
-                    <a href="https://s-n00b-1.github.io/Website/Files/Uploads/Steve.zip">
-                        <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/SteveImage.png">
+                    <a href="https://s-n00b-1.github.io/Website/Files/Uploads/MapbotV2.zip">
+                        <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/MapbotV2.png">
                         <span class="tag">[DOWNLOAD]</span><span> Steve</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Files/Uploads/Rana.zip">
-                        <img class="logo" alt="Rana" src="https://s-n00b-1.github.io/Website/Files/Uploads/RanaImage.png">
-                        <span class="tag">[DOWNLOAD]</span><span> RANA</span>
                     </a>
                     <br>
                 </li>  
