--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
                 <div class="logodiv">
                     <a href="https://s-n00b-1.github.io/Website/home.html"><img class="logo" alt="S_N00B's eye" src="https://s-n00b-1.github.io/Website/Files/Images/Logo.webp"></a>
                     <div class="filter">
-                    <a href="https://s-n00b-1.github.io/Website/home.html" style="color: white; text-decoration: none;">HOME</a>
-                    <span class="footdogs">  / </span>
-                    <a href="https://www.youtube.com/@S_N00B" style="color: white; text-decoration: none;">Youtube</a>
+                    <a href="https://s-n00b-1.github.io/Website/home.html">HOME</a>
+                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <a href="https://www.youtube.com/@S_N00B">Youtube</a>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,14 @@
         <!--Main Content-->
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
-              <li style="margin: 15px 0;padding: 0;list-style: none;">
+            <span>Welcome to S_N00B Site:</span>
+            <br>
+            <br>  
+            <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <a href="https://s-n00b-1.github.io/Website/Entries/Mapbot.html">
+                        <span class="tag">[DOWNLOAD]</span><span> Mapbot Figura Avatar</span>
+                    </a>
+                    <br>
                     <a href="https://s-n00b-1.github.io/Website/Entries/SteveRana.html">
                         <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
                     </a>
