And your days few.

--- a/Entries/Mapbot.html
+++ b/Entries/Mapbot.html
@@ -11,7 +11,7 @@
         <meta name="theme-color" content="#008080">
         <meta content="Mapbot Figura Model" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Map.png?width=300&amp;height=300" property="og:image">
+        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Map.png" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
         <title>S_N00B | Mapbot Figura Model</title>
         <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
