--- a/Entries/Mapbot.html
+++ b/Entries/Mapbot.html
@@ -41,7 +41,7 @@
                     <br>
                     <a href="https://s-n00b-1.github.io/Website/Files/Uploads/MapbotV2.zip">
                         <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/MapbotV2.png">
-                        <span class="tag">[DOWNLOAD]</span><span> Steve</span>
+                        <span class="tag">[DOWNLOAD]</span><span> Mapbot</span>
                     </a>
                     <br>
                 </li>  
