Your choice is made.

--- a/Entries/SteveRana.html
+++ b/Entries/SteveRana.html
@@ -11,7 +11,7 @@
         <meta name="theme-color" content="#008080">
         <meta content="Steve & Rana Figura Models" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta content="https://www.youtube.com/v/0iPs2MjgETA" property="og:video">
+        <meta content="https://s-n00b-1.github.io/Website/Files/Images/SteveRana.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
         <title>S_N00B | Steve & Rana Figura Models</title>
         <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
