Your crime is existence!

--- a/Entries/G-Man.html
+++ b/Entries/G-Man.html
@@ -41,9 +41,13 @@
                     <br>
                     <a href="https://s-n00b-1.github.io/Website/Files/Uploads/G-Man.zip">
                         <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/G-Man.png">
-                        <span class="tag">[DOWNLOAD]</span><span> Gman</span>
+                        <span class="tag">[DOWNLOAD]</span><span> Gman V2</span>
                     </a>
                     <br>
+                    <br>
+                    <span><bold>Changelog:</bold></span>
+                    <br>
+                    <span>* Added use sound</span><br><span>* Fixed model issues</span><br><span>* Added Basic Animations</span>
                 </li>  
                </ul>
             </div>
