You're an error to be corrected!

--- a/Entries/Gordon.html
+++ b/Entries/Gordon.html
@@ -7,13 +7,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="S_N00B">
-        <meta name="Description" content="A Generic Website for S_N00B's needs.">
+        <meta name="Description" content="Gordon Freeman Figura Model">
         <meta name="theme-color" content="#008080">
-        <meta content="S_N00B" property="og:title">
+        <meta content="Gordon Freeman Figura Model" property="og:title">
         <meta content="S_N00B" property="og:site_name">
-        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
+        <meta content="https://s-n00b-1.github.io/Website/Files/Images/Gordon.png" property="og:image">
         <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
-        <title>S_N00B | Home</title>
+        <title>S_N00B | Gordon Freeman Figura Model</title>
         <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
 </head>
     <!--Real Content-->
@@ -35,38 +35,14 @@
         <!--Main Content-->
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
-            <span>Welcome to S_N00B Site:</span>
-            <br>
-            <br>  
-            <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <a href="https://s-n00b-1.github.io/Website/Entries/Gordon.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Gordon Freeman Figura Avatar</span>
-                    </a>
+              <li style="margin: 15px 0;padding: 0;list-style: none;">
+                    <span>This avatar requires the </span><a href="https://modrinth.com/mod/figura">Figura Mod</a><span> to be used</span>
                     <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/DefaultSkins.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Default Skins Figura Avatar</span>
-                    </a>
                     <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/G-Man.html">
-                        <span class="tag">[DOWNLOAD]</span><span> G-Man Figura Avatar</span>
+                    <a href="https://s-n00b-1.github.io/Website/Files/Uploads/Gordon.zip">
+                        <img class="logo" alt="Steve" src="https://s-n00b-1.github.io/Website/Files/Uploads/Gordon.png">
+                        <span class="tag">[DOWNLOAD]</span><span> Gordon Freeman</span>
                     </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/Mapbot.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Mapbot Figura Avatar</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/SteveRana.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
-                    </a>
-                    <br>
-                    <a href="https://youtu.be/gAxLNgMzAGA">
-                        <span class="tag">[VIDEO]</span><span> The Machine</span>
-                    </a>
-                    <br>
-                    <a href="https://youtu.be/cPHWg9ovr6A">
-                        <span class="tag">[VIDEO]</span><span> Soon™</span>
-                    </a>
-                    <br>
                 </li>  
                </ul>
             </div>
