I shall rend you apart.

--- a/home.html
+++ b/home.html
@@ -39,36 +39,48 @@
             <br>
             <br>  
             <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <a href="https://s-n00b-1.github.io/Website/Entries/Gordon.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Gordon Freeman Figura Avatar</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/DefaultSkins.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Default Skins Figura Avatar</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/G-Man.html">
-                        <span class="tag">[DOWNLOAD]</span><span> G-Man Figura Avatar</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/Mapbot.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Mapbot Figura Avatar</span>
-                    </a>
-                    <br>
-                    <a href="https://s-n00b-1.github.io/Website/Entries/SteveRana.html">
-                        <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
-                    </a>
-                    <br>
-                    <a href="https://youtu.be/gAxLNgMzAGA">
-                        <span class="tag">[VIDEO]</span><span> The Machine</span>
-                    </a>
-                    <br>
-                    <a href="https://youtu.be/cPHWg9ovr6A">
-                        <span class="tag">[VIDEO]</span><span> Soon™</span>
-                    </a>
-                    <br>
-                </li>  
-               </ul>
+                <a href="https://youtube.com/playlist?list=PLAFqt5AAxMEQ_FkL52OjcjLq1iqKiII_b">
+                    <span class="tag">[PLAYLIST]</span><span> 0x10c</span>
+                </a>
+                <br>    
+                <a href="https://youtu.be/VwBqvjVvHyU">
+                    <span class="tag">[VIDEO]</span><span> I Participated in a Minecraft Render Challenge</span>
+                </a>
+                <br>
+                <a href="https://youtube.com/shorts/X9_xzVJAAPo">
+                    <span class="tag">[VIDEO]</span><span> Warden & Sniffer Plushie</span>
+                </a>
+                <br>
+                <a href="https://s-n00b-1.github.io/Website/Entries/Gordon.html">
+                    <span class="tag">[DOWNLOAD]</span><span> Gordon Freeman Figura Avatar</span>
+                </a>
+                <br>
+                <a href="https://s-n00b-1.github.io/Website/Entries/DefaultSkins.html">
+                    <span class="tag">[DOWNLOAD]</span><span> Default Skins Figura Avatar</span>
+                </a>
+                <br>
+                <a href="https://s-n00b-1.github.io/Website/Entries/G-Man.html">
+                    <span class="tag">[DOWNLOAD]</span><span> G-Man Figura Avatar</span>
+                </a>
+                <br>
+                <a href="https://s-n00b-1.github.io/Website/Entries/Mapbot.html">
+                    <span class="tag">[DOWNLOAD]</span><span> Mapbot Figura Avatar</span>
+                </a>
+                <br>
+                <a href="https://s-n00b-1.github.io/Website/Entries/SteveRana.html">
+                    <span class="tag">[DOWNLOAD]</span><span> Steve & Rana Figura Avatars</span>
+                </a>
+                <br>
+                <a href="https://youtu.be/gAxLNgMzAGA">
+                    <span class="tag">[VIDEO]</span><span> The Machine</span>
+                </a>
+                <br>
+                <a href="https://youtu.be/cPHWg9ovr6A">
+                    <span class="tag">[VIDEO]</span><span> Soon™</span>
+                </a>
+                <br>
+            </li>  
+            </ul>
             </div>
         </div>
     </body>
