--- a/home.html
+++ b/home.html
@@ -61,7 +61,8 @@
                             const linkElement = document.createElement('a');
                             linkElement.href = link;
                             linkElement.textContent = title;
-                        
+
+                            listItem.cssText += "margin: 15px 0;padding: 0;list-style: none;"
                             listItem.appendChild(linkElement);
                             rssFeedList.appendChild(listItem);
                         }
