--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
                             linkElement.href = link;
                             linkElement.textContent = title;
 
-                            listItem.cssText += "margin: 15px 0;padding: 0;list-style: none;";
+                            listItem.style.cssText += "margin: 15px 0;padding: 0;list-style: none;";
                             listItem.appendChild(linkElement);
                             rssFeedList.appendChild(listItem);
                         }
