This will hurt.

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <!--Meta Information-->
     <head>
         <link rel="icon" href="https://s-n00b-1.github.io/Website/Files/Images/favicon.ico">
+        <link rel="me" href="https://mastodon.social/@S_N00B">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <meta name="author" content="S_N00B">
