--- a/Entries/Gordon.html
+++ b/Entries/Gordon.html
@@ -28,6 +28,8 @@
                     <a href="https://s-n00b-1.github.io/Website/home.html">HOME</a>
                     <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
                     <a href="https://www.youtube.com/@S_N00B">Youtube</a>
+                    <span class="footdogs"  style="color: white; text-decoration: none;">  / </span>
+                    <a href="https://mastodon.social/@S_N00B">Mastodon</a>
                     </div>
                 </div>
             </div>
