--- a/418.html
+++ b/418.html
@@ -13,7 +13,7 @@
         <meta content="S_N00B" property="og:site_name">
         <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
         <link type="application/json+oembed" href="Files/oembed.json">
-        <title>S_N00B | 404</title>
+        <title>S_N00B | 418</title>
         <link rel="stylesheet" href="Files/CSS/Home.css">
 </head>
     <!--Real Content-->
@@ -38,7 +38,10 @@
         <div class="Top" style="max-width: 900px;margin: auto;padding: 0 20px;">
            <div id="content" style="max-width:100%;margin:auto;"><ul style="display: block;list-style-type: disc;margin-block-start: 1em;margin-block-end: 1em;margin-inline-start: 0px;margin-inline-end: 0px;padding-inline-start: 40px;">
               <li style="margin: 15px 0;padding: 0;list-style: none;">
-                    <span> 404 | Either the URL is wrong, or I deleted it. Either way, not here.</span>
+                    <span> 418 | Can I get you some tea?</span>
+                    <br>
+                    <br>
+                    <span>Coffee?!?! No can do, only have this teapot: 🫖</span>
                     <br>
                 </li>  
                </ul>
