--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                             const item = items[i];
                             const tag = item.getElementsByTagName('description')[0].textContent;
                             const title = item.getElementsByTagName('title')[0].textContent;
-                            const link = item.getElementsByTagName('id')[0].textContent;
+                            const id = item.getElementsByTagName('id')[0].textContent;
                         
                             const listItem = document.createElement('li');
                             const linkElement = document.createElement('a');
