> > >THE RED DOOR < < <

--- a/content.html
+++ b/content.html
@@ -76,7 +76,7 @@
                                 }
 
                                 const spanElement = document.createElement('span');
-                                const lineBreak = documetn.createElement('br');
+                                const lineBreak = document.createElement('br');
                                 spanElement.textContent = `${title}`;
                                 contentList.appendChild(spanElement);
                                 contentList.appendChild(lineBreak);
