So now that you're here, what do you think?

--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
         <meta content="S_N00B" property="og:title">
         <meta content="S_N00B" property="og:site_name">
         <meta content="https://s-n00b-1.github.io/Website/Files/Images/Icon.png?width=300&amp;height=300" property="og:image">
-        <link type="application/json+oembed" href="Files/oembed.json">
+        <link type="application/json+oembed" href="https://s-n00b-1.github.io/Website/Files/oembed.json">
         <title>S_N00B | 404</title>
-        <link rel="stylesheet" href="Files/CSS/Home.css">
+        <link rel="stylesheet" href="https://s-n00b-1.github.io/Website/Files/CSS/Home.css">
 </head>
     <!--Real Content-->
     <body data-gr-c-s-loaded="true">
